--- a/posts/client/package.json
+++ b/posts/client/package.json
@@ -15,6 +15,7 @@
     "deploy": "npm run build; push-dir --dir=dist --branch=gh-pages --cleanup"
   },
   "dependencies": {
+    "autolinker": "^1.6.1",
     "axios": "^0.17.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
