--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "autolinker": "^1.6.1",
     "axios": "^0.17.1",
     "vue": "^2.5.2",
+    "vue-resource": "^1.3.6",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
