--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "autolinker": "^1.6.1",
     "axios": "^0.17.1",
+    "normalize.css": "^8.0.0",
     "vue": "^2.5.2",
     "vue-resource": "^1.3.6",
     "vue-router": "^3.0.1"
@@ -67,6 +68,7 @@
     "mocha": "^3.2.0",
     "nightwatch": "^0.9.12",
     "node-notifier": "^5.1.2",
+    "normalize.css": "^8.0.0",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
     "phantomjs-prebuilt": "^2.1.14",
