--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A blog built using vuepress",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "vuepress build src"
   },
   "repository": {
     "type": "git",
