--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "homepage": "https://github.com/cpadilla/christofer-rocks#readme",
   "dependencies": {
     "vuepress": "^1.7.1"
+  },
+  "devDependencies": {
+    "@vuepress/plugin-google-analytics": "^1.7.1"
   }
 }
