--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "vuepress": "^1.7.1"
   },
   "devDependencies": {
-    "@vuepress/plugin-google-analytics": "^1.7.1"
+    "@vuepress/plugin-google-analytics": "^1.7.1",
+    "vuepress-plugin-flexsearch": "^0.1.0"
   }
 }
