--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "devDependencies": {
     "node-sass": "^5.0.0",
     "sass-loader": "^10.1.1",
+    "vuepress-plugin-autometa": "^0.1.13",
     "vuepress-plugin-flexsearch": "^0.1.0"
   }
 }
