--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/cpadilla/christofer-rocks#readme",
   "dependencies": {
+    "markdown-it-table-of-contents": "git+https://github.com/cpadilla/markdown-it-table-of-contents.git",
     "sass": "^1.32.4",
     "vuepress": "^1.7.1"
   },
