Updating rss plugin to use forked version

--- a/package.json
+++ b/package.json
@@ -27,6 +27,6 @@
     "sass-loader": "^10.1.1",
     "vuepress-plugin-autometa": "^0.1.13",
     "vuepress-plugin-flexsearch": "^0.1.0",
-    "vuepress-plugin-rss": "^2.0.0"
+    "vuepress-plugin-rss": "git+https://github.com/cpadilla/vuepress-plugin-rss.git"
   }
 }
