Updating rss plugin as dependency

--- a/package.json
+++ b/package.json
@@ -19,14 +19,14 @@
   "homepage": "https://github.com/cpadilla/christofer-rocks#readme",
   "dependencies": {
     "markdown-it-table-of-contents": "git+https://github.com/cpadilla/markdown-it-table-of-contents.git",
-    "sass": "^1.32.4",
-    "vuepress": "^1.7.1"
+    "sass": "^1.35.2",
+    "vuepress": "^1.8.2",
+    "vuepress-plugin-rss": "^2.0.0"
   },
   "devDependencies": {
     "node-sass": "^5.0.0",
-    "sass-loader": "^10.1.1",
+    "sass-loader": "^10.2.0",
     "vuepress-plugin-autometa": "^0.1.13",
-    "vuepress-plugin-flexsearch": "^0.1.0",
-    "vuepress-plugin-rss": "^2.0.0"
+    "vuepress-plugin-flexsearch": "^0.1.0"
   }
 }
