--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "sudo vuepress build src"
+    "build": "vuepress build src"
   },
   "repository": {
     "type": "git",
@@ -20,9 +20,7 @@
   "dependencies": {
     "markdown-it-table-of-contents": "git+https://github.com/cpadilla/markdown-it-table-of-contents.git",
     "vuepress": "^1.8.2",
-    "vuepress-plugin-rss": "^2.0.0"
-  },
-  "devDependencies": {
+    "vuepress-plugin-rss": "^2.0.0",
     "vuepress-plugin-autometa": "^0.1.13",
     "vuepress-plugin-flexsearch": "^0.1.0"
   }
