--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "vuepress build src"
+    "build": "vuepress build src",
+    "start": "vuepress dev src"
   },
   "repository": {
     "type": "git",
@@ -19,9 +20,9 @@
   "homepage": "https://github.com/cpadilla/christofer-rocks#readme",
   "dependencies": {
     "markdown-it-table-of-contents": "git+https://github.com/cpadilla/markdown-it-table-of-contents.git",
-    "vuepress": "^1.8.2",
-    "vuepress-plugin-rss": "^2.0.0",
+    "vuepress": "^1.9.7",
     "vuepress-plugin-autometa": "^0.1.13",
-    "vuepress-plugin-flexsearch": "^0.1.0"
+    "vuepress-plugin-flexsearch": "^0.1.0",
+    "vuepress-plugin-rss": "^2.0.0"
   }
 }
